--- a/src/modules/Roadmap/components/RoadmapItem/RoadmapItem.module.scss
+++ b/src/modules/Roadmap/components/RoadmapItem/RoadmapItem.module.scss
@@ -1,6 +1,6 @@
 @use "@/scss/utils" as *;
 
-&-link {
+.roadmap-link {
     display: inline-block;
     font-size: toRem(14);
     font-weight: 400;
