--- a/src/modules/Roadmap/components/RoadmapItem/RoadmapItem.module.scss
+++ b/src/modules/Roadmap/components/RoadmapItem/RoadmapItem.module.scss
@@ -1,14 +1,26 @@
 @use "@/scss/utils" as *;
 
-.roadmap-link {
-    display: inline-block;
-    font-size: toRem(14);
-    font-weight: 400;
-    color: rgba($color: $textColor3, $alpha: 0.5);
-    line-height: 1.5; /* 21/14 */
-    &:hover { text-decoration: underline; }
-    &__current {
-        @extend .roadmap-link;
-        color: $textColor3;
+.roadmap {
+    &-link {
+        display: inline-block;
+        font-size: toRem(14);
+        font-weight: 400;
+        color: rgba($color: $textColor3, $alpha: 0.5);
+        line-height: 1.5; /* 21/14 */
+        &:hover { text-decoration: underline; }
+        &__current {
+            @extend .roadmap-link;
+            color: $textColor3;
+        }
+    }
+    
+    &-separator {
+        display: inline-block;
+        font-size: toRem(14);
+        font-weight: 400;
+        color: rgba($color: $textColor3, $alpha: 0.5);
+        line-height: 1.5; /* 21/14 */
+        margin: 0 toRem(12);
     }
 }
+
