products rewrited from store  to get-requests

--- a/src/pages/not-found/NotFound.module.scss
+++ b/src/pages/not-found/NotFound.module.scss
@@ -1,16 +1,16 @@
 @use "@/scss/utils" as *;
 
 .not-found {
-    @include adaptiveValue(padding, 135, 15);
-    @include nest-to-avoid-collision {
-        padding-top: toRem(80);
-        padding-bottom: toRem(140);
+    &--section {
+        @include adaptiveValue(padding, 135, 15);
+        @include nest-to-avoid-collision {
+            padding-top: toRem(80);
+            padding-bottom: toRem(140);
+        }
     }
     &--container {
         max-width: toRem($containerWidth);
         margin: 0 auto;
-    }
-    &--content {
         display: flex;
         flex-direction: column;
         align-items: center;
